# bipedal-locomotion-framework

./: .gitignore  AccelerometerMeasurementDynamics_8h.html  AdvanceableRunner_8h.html  Advanceable_8h.html  AngularMomentumTask_8h.html  ArucoDetector_8h.html  Barrier_8h.html  BaseDynamicsTask_8h.html  BaseEstimatorFromFootIMU_8h.html  ButterworthLowPassFilter_8h.html  CARE_8h.html  CHANGELOG.md  CHANGELOG.md.orig  CMakeLists.txt  CasadiConversions_8h.html  CentroidalDynamics_8h.html  CentroidalMPC_8h.html  Clock_8h.html  CoMZMPController_8h.html  CommonConversions_8h.html  CompliantContactWrench_8h.html  ConstantMeasurementModel_8h.html  ConstantWeightProvider_8h.html  Constants_8h.html  ContactDetector_8h.html  ContactDetectors_8h.html  ContactListJsonParser_8h.html  ContactList_8h.html  ContactModel_8h.html  ContactPhaseList_8h.html  ContactPhase_8h.html  ContactWrenchCone_8h.html  ContactWrench_8h.html  Contact_8h.html  Contacts_8h.html  ContinuousContactModel_8h.html  ConvexHullHelper_8h.html  CppAD_8h.html  CubicSpline_8h.html  DCMPlanner_8h.html  (+906 more)
bindings/: CMakeLists.txt
bindings/python/: BaseTypes.cpp  BipedalLocomotion.cpp  BipedalLocomotion_GenericContainer.cpp  BipedalLocomotion_GenericContainer.h  BipedalLocomotion_ParametersHandler.cpp  BipedalLocomotion_ParametersHandler.h  BipedalLocomotion_Planners.cpp  BipedalLocomotion_Planners.h  CMakeLists.txt  Constants.cpp  ContactDetectors.cpp  Contacts.cpp  DCMPlanner.cpp  FloatingBaseEstimators.cpp  LeggedOdometry.cpp  ParametersHandler.cpp  QuinticSpline.cpp  RobotInterface.cpp  SwingFootPlaner.cpp  TimeVaryingDCMPlanner.cpp  all.py  bipedal_locomotion.cpp  bipedal_locomotion.h  bipedal_locomotion_framework.cpp  bipedal_locomotion_framework.cpp.in  bipedal_locomotion_framework.h  utils.py
bindings/python/Contacts/: CMakeLists.txt
bindings/python/ContinuousDynamicalSystem/: CMakeLists.txt
bindings/python/Conversions/: CMakeLists.txt
bindings/python/FloatingBaseEstimators/: CMakeLists.txt
bindings/python/IK/: CMakeLists.txt
bindings/python/JointLevelControllers/: CMakeLists.txt
bindings/python/ML/: CMakeLists.txt
bindings/python/Math/: CMakeLists.txt
bindings/python/ParametersHandler/: CMakeLists.txt
bindings/python/Planners/: CMakeLists.txt
bindings/python/ReducedModelControllers/: CMakeLists.txt
bindings/python/RobotDynamicsEstimator/: CMakeLists.txt
bindings/python/RobotInterface/: CMakeLists.txt
bindings/python/SimplifiedModelControllers/: CMakeLists.txt
bindings/python/System/: CMakeLists.txt
bindings/python/TSID/: CMakeLists.txt
bindings/python/TextLogging/: CMakeLists.txt
bindings/python/YarpUtilities/: CMakeLists.txt
bindings/python/manif/: CMakeLists.txt
bindings/python/tests/: CMakeLists.txt  model.urdf  pytest.ini  test_base_types.py  test_bipedal_locomotion_planners.py  test_contact.py  test_legged_odometry.py  test_parameters_handler_std.py  test_quintic_spline.py  test_schmitt_trigger_detector.py  test_swing_foot_planner.py  test_time_verying_dcm_planner.py
devices/: CMakeLists.txt
devices/FloatingBaseEstimatorDevice/: CMakeLists.txt  FloatingBaseEstimatorDevice.ini
devices/JointTorqueControlDevice/: CMakeLists.txt  README.md
devices/RobotDynamicsEstimatorDevice/: CMakeLists.txt  README.md
devices/VectorsCollectionWrapper/: CMakeLists.txt  README.md
devices/YarpRobotLoggerDevice/: CMakeLists.txt  README.md
devices/examples/: CMakeLists.txt
examples/: CMakeLists.txt
examples/BindingsMotorControl/: yarp_direct_motor_control.ipynb
examples/InverseKinematics/: README.md  inverse_kinematics.ipynb
examples/MANN/: MANNAutoregressive.ipynb  MANNTrajectoryGenerator.ipynb  README.md  velMANNAutoregressive.ipynb  velMANNTrajectoryGenerator.ipynb
examples/PeriodicThread/: CMakeLists.txt  main.cpp
examples/Python/: yarp_direct_motor_control.ipynb
examples/UnicycleTrajectoryGenerator/: CMakeLists.txt  FolderPath.h.in  main.cpp
examples/VelMANN/: README.md  VelMANNAutoregressive.ipynb  VelMANNTrajectoryGenerator.ipynb
src/: CMakeLists.txt
src/AutoDiff/: CMakeLists.txt
src/BipedalLocomotionControllers/: CMakeLists.txt
src/ContactModels/: CMakeLists.txt
src/Contacts/: CMakeLists.txt
src/ContinuousDynamicalSystem/: CMakeLists.txt
src/Conversions/: CMakeLists.txt
src/DCMWalkingPipeline/: CMakeLists.txt
src/Estimators/: CMakeLists.txt
src/GenericContainer/: CMakeLists.txt
src/IK/: CMakeLists.txt
src/JointLevelControllers/: CMakeLists.txt
src/ML/: CMakeLists.txt
src/Math/: CMakeLists.txt
src/OptimalControlUtilities/: CMakeLists.txt
src/ParametersHandler/: CMakeLists.txt
src/Perception/: CMakeLists.txt
src/Planners/: CMakeLists.txt  CMakeLists.txt.orig
src/ReducedModelControllers/: CMakeLists.txt
src/RobotInterface/: CMakeLists.txt
src/SimplifiedModelControllers/: CMakeLists.txt
src/Simulator/: CMakeLists.txt
src/System/: CMakeLists.txt
src/TSID/: CMakeLists.txt
src/TestUtils/: CMakeLists.txt  MemoryAllocationMonitor.cpp  MemoryAllocationMonitorDummy.cpp  MemoryAllocationMonitorGlobalVariables.h  MemoryAllocationMonitorRedefinedMemoryFunctions.c
src/TextLogging/: CMakeLists.txt
src/TimeProfiler/: CMakeLists.txt
src/WholeBodyControllers/: CMakeLists.txt
src/YarpUtilities/: CMakeLists.txt
utilities/: CMakeLists.txt
utilities/JointPositionTracking/: CMakeLists.txt  README.md
utilities/MasImuTest/: CMakeLists.txt  README.md
utilities/balancing-position-control/: CMakeLists.txt  README.md
utilities/balancing-torque-control/: CMakeLists.txt  README.md
utilities/calibration-delta-updater/: CMakeLists.txt  README.md
utilities/cartesian-trajectory-player/: CMakeLists.txt
utilities/joint-position-tracking/: CMakeLists.txt  README.md
utilities/joint-trajectory-player/: CMakeLists.txt  README.md
utilities/joints-grid-position-tracking/: CMakeLists.txt  README.md  blf-joints-grid-position-tracking.py
utilities/mas-imu-test/: CMakeLists.txt  README.md
utilities/motor-current-tracking/: CMakeLists.txt  README.md  blf-motor-current-tracking.py
utilities/realsense-test/: CMakeLists.txt  README.md
(+16920 files in other folders)
