[metadata]
name = bipedal_locomotion_framework
description = Suite of libraries for achieving bipedal locomotion on humanoid robots.
long_description = file: README.md
long_description_content_type = text/markdown
author = Diego Ferigo
author_email = dgferigo@gmail.com
license = LGPL
platforms = any
url = https://ami-iit.github.io/bipedal-locomotion-framework

project_urls =
    Tracker = https://github.com/ami-iit/bipedal-locomotion-framework/issues
    Documentation = https://ami-iit.github.io/bipedal-locomotion-framework
    Source = https://github.com/ami-iit/bipedal-locomotion-framework

keywords =
    robot
    robotics
    locomotion
    humanoid
    framework

classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Framework :: Robot Framework
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)

[options]
zip_safe = False
python_requires = >=3.6

[options.extras_require]
testing =
    pytest
    pytest-icdiff
all =
    %(testing)s
