include_directories(include)

add_executable(unicycleTrajectoryGeneratorExample UnicycleTrajectoryGenerator/main.cpp)

target_link_libraries(unicycleTrajectoryGeneratorExample 
BipedalLocomotion::Unicycle 
BipedalLocomotion::SystemYarpImplementation 
BipedalLocomotion::ParametersHandlerYarpImplementation 
BipedalLocomotion::Planners
BipedalLocomotion::ContinuousDynamicalSystem
${YARP_LIBRARIES}
)

