# Copyright (C) 2019 Istituto Italiano di Tecnologia (IIT). All rights reserved.
# This software may be modified and distributed under the terms of the
# GNU Lesser General Public License v2.1 or any later version.

add_subdirectory(ContinuousDynamicalSystem)
add_subdirectory(TextLogging)
add_subdirectory(GenericContainer)
add_subdirectory(YarpUtilities)
add_subdirectory(ParametersHandler)
add_subdirectory(Conversions)
add_subdirectory(Contacts)
add_subdirectory(Estimators)
add_subdirectory(System)
add_subdirectory(Planners)
add_subdirectory(ContactModels)
add_subdirectory(AutoDiff)
add_subdirectory(RobotInterface)
add_subdirectory(Math)
add_subdirectory(TSID)
add_subdirectory(Perception)
add_subdirectory(IK)
add_subdirectory(ReducedModelControllers)
