# Copyright (C) 2020 Istituto Italiano di Tecnologia (IIT). All rights reserved.
# This software may be modified and distributed under the terms of the
# BSD-3-Clause license.


add_subdirectory(joint-position-tracking)
add_subdirectory(joint-trajectory-player)
add_subdirectory(mas-imu-test)
add_subdirectory(realsense-test)
add_subdirectory(calibration-delta-updater)
add_subdirectory(balancing-position-control)
add_subdirectory(balancing-torque-control)
